--- a/index.css
+++ b/index.css
@@ -6,3 +6,10 @@ h1 {
   color: navy;
   margin-left: 20px;
 }
+p.serif {
+  font-family: "Times New Roman", Times, serif;
+}
+
+p.sansserif {
+  font-family: Arial, Helvetica, sans-serif;
+}
