--- a/index.css
+++ b/index.css
@@ -15,3 +15,7 @@ p.serif {
 p.sansserif {
   font-family: Arial, Helvetica, sans-serif;
 }
+p.small{
+	font-family: "Helvetica";
+	font-size: 3vw;
+}
