--- a/index.css
+++ b/index.css
@@ -16,6 +16,6 @@ p.sansserif {
   font-family: Arial, Helvetica, sans-serif;
 }
 p.small{
-	font-family: "Helvetica";
-	font-size: 3vw;
+	font-family: "Arial";
+	font-size: 2vw;
 }
