--- a/index.css
+++ b/index.css
@@ -1,21 +1,29 @@
 body {
-  background-color: #4885ed;
-  font-size: 5vw;
-  text-align: center;
-}
+	background-color: #4885ed;
+	text-align: center;
+	backgroung-img:url("https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto/gigs/101123951/original/b68dc70b3cb1884d8690bb8e0b27c096f92ed47b/design-the-best-portfolio.jpg")
+	background-repeat:no-repeat;
+	background-size:cover;
+	}
+
 h1 {
-  color: white;
-  text-align: center;
-  font-size: 10vw;
-}
-p.serif {
-  font-family: "Times New Roman", Times, serif;
+	  font-size:5vw;
+	  color: white;
+	  text-align: center;
+	  font-size: 10vw;
 }
 
-p.sansserif {
-  font-family: Arial, Helvetica, sans-serif;
+.serif {
+  	font-family: Arial, Helvetica, sans-serif;
 }
-p.small{
-	font-family: Arial;
+
+.sansserif {
+  	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+	text-align:center;
+}
+.small{
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 2vw;
+	font-style:italic;
+	text-align:center;
 }
